# shmem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format_code.sh
csrc/: pub.cpp  shmem.cpp  shmem.h  sub.cpp
csrc/bindings/: cyshmem.cpp
pyshmem/: README.md  pub.py  pyproject.toml  setup.sh  setup_and_run.sh  sub.py
pyshmem/shmem/: __init__.py
pyshmem/tests/: __init__.py  test_perf.py
