[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshmem"
version = "1.0.0"
description = "Python bindings for shmem library - a shared memory queue implementation"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "typon", email = "fake@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "pudb>=2024.1.3",
    "pytest>=8.3.5",
]

[project.urls]
"Homepage" = "https://github.com/typon/shmem"
"Bug Tracker" = "https://github.com/typon/shmem/issues"

[tool.setuptools]
packages = ["shmem"]
package-dir = {shmem = "shmem"}
include-package-data = true

[tool.setuptools.package-data]
shmem = ["*.so", "*.dylib", "*.dll"] 
